--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -6,10 +6,33 @@
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  box-shadow: 0 3 px 13px 1px rgb(0 0 0 / 9%);
+  box-shadow: 0 3px 13px 1px rgb(0 0 0 / 39%);
+}
 
-  border-radius: 8px;
-  padding: 20px;
-  margin: 15px 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.imagen-testimonio {
+  height: 100%;
+  width: auto;
+}
+
+.contenedor-texto-testimonio {
+  text-align: center;
+  padding: 40px;
+  font-family: Lato, sans-serif;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
+
+.nombre-testimonio {
+  font-size: 1.3rem;
+}
+
+.cargo-testimonio {
+  font-size: 1.3rem;
+  margin-top: 15px;
+  padding-bottom: 30px;
+}
+
+.texto-testimonio {
+  font-size: 1.1rem;
+  text-align: justify;
 }
